<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="#000000"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarSize="10pt"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <!-- Account Information -->


        <!-- User Information -->

        <EditText
            android:id="@+id/EditText02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dip"
            android:background="@color/ca_header"
            android:editable="false"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/user_information_cont" />

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:text="*"
                android:textColor="#FF3300" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:text="@string/mobile"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <EditText
            android:id="@+id/txtCreateMobile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="5dip"
            android:layout_weight="1"
            android:inputType="phone"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/linAdd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/asterisk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:text="*"
                android:textColor="#FF3300" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:text="@string/address1"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <EditText
            android:id="@+id/txtCreateAdd1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="5dip"
            android:inputType="textPostalAddress"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/linCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/asterisk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:text="*"
                android:textColor="#FF3300" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:text="@string/city"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <EditText
            android:id="@+id/txtCreateCity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="5dip"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/linRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:text="@string/region"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <EditText
            android:id="@+id/txtCreateRegion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="5dip"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/linPostCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/asterisk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:text="*"
                android:textColor="#FF3300" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:text="@string/post_code"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <EditText
            android:id="@+id/txtCreatePostCode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="5dip"
            android:inputType="textPostalAddress"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/linCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/asterisk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:text="*"
                android:textColor="#FF3300" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:text="@string/country_ca"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spnCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:prompt="@string/prompt_country" />

        <LinearLayout
            android:id="@+id/linCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp" >

            <TextView
                android:id="@+id/asterisk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dip"
                android:text="*"
                android:textColor="#FF3300" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dip"
                android:text="@string/currency_ca"
                android:textColor="#FFFFFF" />

            <Spinner
                android:id="@+id/spnCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/prompt_currency" >
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linDoB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp" >

            <TextView
                android:id="@+id/asterisk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dip"
                android:text="*"
                android:textColor="#FF3300" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dip"
                android:text="@string/dob_ca"
                android:textColor="#FFFFFF" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tvDoB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/date_goes_here"
                    android:textSize="15dp" >
                </TextView>

                <Button
                    android:id="@+id/btnSetDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_date_btn" >
                </Button>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/asterisk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dip"
                android:text="*"
                android:textColor="#FF3300" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dip"
                android:text="@string/gender"
                android:textColor="#FFFFFF" />

            <RadioGroup
                android:id="@+id/rbgGender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/male" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/radFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/female" >
                </RadioButton>
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_account_btn" >
        </Button>
    </LinearLayout>

</ScrollView>