<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:id="@+id/ScrollView01"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbars="vertical"
	android:layout_width="fill_parent" android:scrollbarSize="10pt"
	android:layout_gravity="center">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:padding="10sp">
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:padding="10sp">

			<ImageView android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:layout_gravity="center_horizontal" android:layout_margin="10sp" android:src="@drawable/titlelogo" android:contentDescription="TitleLogo"/>

			<EditText android:layout_height="wrap_content" android:id="@+id/nameEditText"
				android:hint="@string/name" android:layout_width="match_parent"
				android:layout_marginTop="10sp" />

			<EditText android:layout_height="wrap_content" android:hint="@string/password"
				android:layout_width="match_parent" android:id="@+id/passwordEditText"
				android:inputType="textPassword" />
			<CheckBox android:layout_height="wrap_content" android:id="@+id/rememberCheckBox"
				android:text="@string/remember" android:layout_width="match_parent"
				android:checked="true" android:layout_marginTop="10sp"/>

			<LinearLayout android:id="@+id/linearLayout1"
				android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginBottom="10sp">
				<Button android:layout_height="wrap_content" android:text="@string/login"
					android:id="@+id/loginbutton" android:layout_width="wrap_content"
					android:layout_weight="1" />
				<Button android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_weight="1"
					android:text="Cancel" android:id="@+id/cancel" />
			</LinearLayout>



		</LinearLayout>
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/linearLayout2"
			android:orientation="vertical" android:gravity="center" android:layout_marginTop="30sp">
			<TextView android:id="@+id/textView1" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall"
				android:text="New User ?" android:textSize="15sp" />
			<Button android:layout_height="wrap_content" android:id="@+id/btnCreateAccountPage"
				android:text="Create an Account" android:layout_width="fill_parent" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>